<?xml version="1.0"?>
<package format="2">
  <name>rs_ue4beliefstate</name>
  <version>0.0.0</version>
  <description>The rs_ue4beliefstate package</description>
  <maintainer email="fkenghag@uni-bremen.de">franklin</maintainer>
  <license>3-clause BSD License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robosherlock</build_depend>
  <build_depend>world_control_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>robosherlock</build_export_depend>
  <exec_depend>robosherlock</exec_depend>
  <exec_depend>world_control_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
